Fix flickering background color.

--- a/landing/ctzn.css
+++ b/landing/ctzn.css
@@ -1,7 +1,7 @@
 
   /* =Elements
   ----------------------------------------------- */
-  html {
+  html, body {
     height: 100%;
   }
   body {
@@ -9,7 +9,6 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    min-height: 100%;
   }
   b, strong, h1, h2, h3, h4, h5, h6 {
     font-family: "Proxima N W01 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
